<resources>
    <string name="app_name">Calorie Tracker</string>
    <string name="sample" translatable="false">Sample Text</string>

    <string name="placeholder_number" translatable="false">%d</string>

    <!-- MAIN PAGE STRINGS -->
    <string name="main_date_today">Today</string>
    <string name="main_date_yesterday">Yesterday</string>

    <string name="main_cal_remaining">Calories remaining: %d</string>
    <string name="main_cal_consumed">Calories consumed: %d</string>
    <string name="main_cal_percentage">%d%% of baseline</string>

    <string name="main_nutrients_carbs">Carbs: %.1f / %.1f g</string>
    <string name="main_nutrients_fat">Fat: %.1f / %.1f g</string>
    <string name="main_nutrients_protein">Protein: %.1f / %.1f g</string>

    <string name="main_breakfast">Breakfast</string>
    <string name="main_lunch">Lunch</string>
    <string name="main_dinner">Dinner</string>
    <string name="main_snacks">Snacks/Other</string>
    <string name="main_meal_cals">%d kcal</string>
    <string name="main_water">Water</string>
    <string name="main_water_consumption">%d.%d0 / %d.%d0 L</string>

    <string name="main_weight_btn_tooltip">Change weight</string>
    <string name="main_weight_dialog_title">Your weight as of %s:</string>
    <string name="main_weight_dialog_btn_positive">Apply</string>


    <!-- NAVIGATION BAR -->
    <string name="nav_main">Diary</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_progress">Stats</string>


    <!-- ADD FOOD PAGE -->
    <string name="food_title_breakfast">Breakfast</string>
    <string name="food_title_lunch">Lunch</string>
    <string name="food_title_dinner">Dinner</string>
    <string name="food_title_snacks">Snacks</string>

    <string name="food_mode_search">All</string>
    <string name="food_mode_history">History</string>
    <string name="food_mode_favorite">Favorite</string>
    <string name="food_mode_add">Add</string>

    <string name="food_initial_selection_fail">Error! Failed to load previously selected foods for this meal.</string>

    <string name="food_history_add_fail">Error! Foods were not added to selection history.</string>

    <string name="food_list_item_cals">%d kcal</string>
    <string name="food_list_item_portion_size">%d g</string>
    <string name="food_list_item_nutrient_pct" translatable="false">%.1f%%</string>
    <string name="food_list_item_protein">%.1f g\u000aprotein</string>
    <string name="food_list_item_carbs">%.1f g\u000acarbs</string>
    <string name="food_list_item_fat">%.1f g\u000afat</string>
    <string name="food_list_item_portion_size_input_hint">Portion size…</string>
    <string name="food_list_item_portion_unit_g">g</string>

    <string name="food_list_item_popup_edit">Edit</string>
    <string name="food_list_item_popup_delete">Delete</string>

    <string name="food_list_item_delete_confirm_title">Are you sure you want to delete\n«%s»?</string>
    <string name="food_list_item_delete_confirm_description">Deleted items cannot be restored</string>
    <string name="food_list_item_delete_confirm_btn_positive">Delete</string>
    <string name="food_list_item_delete_success">«%s» deleted successfully</string>
    <string name="food_list_item_delete_fail">Error occurred. Item was not deleted.</string>

    <string name="food_list_item_edit_btn_commit">Save</string>
    <string name="food_list_item_edit_success">«%s» changed successfully</string>
    <string name="food_list_item_edit_fail">Error occurred. Item was not changed.</string>

    <string name="food_search_query_hint">Search…</string>

    <string name="food_new_name_hint">Name…</string>
    <string name="food_new_cals_hint">Kcal per 100g</string>
    <string name="food_new_nutrient_description">Nutrients per 100g, g</string>
    <string name="food_new_carbs_hint">Carbs</string>
    <string name="food_new_fat_hint">Fat</string>
    <string name="food_new_protein_hint">Protein</string>
    <string name="food_new_check_add">Add item to current meal</string>
    <string name="food_new_btn_save">Save</string>
    <string name="food_new_btn_cancel">Cancel</string>
    <string name="food_new_save_success">«%s» saved successfully</string>
    <string name="food_new_save_fail">An error occurred during saving. Item was not saved.</string>

    <string name="food_empty_all_initial">Food items list will be displayed here</string>
    <string name="food_empty_all_result">No items have been found</string>
    <string name="food_empty_history_initial">You have no history of recently chosen foods</string>
    <string name="food_empty_history_result">No items have been found among recently chosen</string>
    <string name="food_empty_favorite_initial">You have no favorite foods</string>
    <string name="food_empty_favorite_result">No items have been found among your favorite</string>

    <!-- SETTINGS PAGE -->
    <string name="settings_baselines_header">Baseline daily intakes</string>
    <string name="settings_language_header">Language</string>
    <string name="settings_file_header">Files</string>

    <string name="settings_calories_title">Calories (kcal)</string>
    <string name="settings_carbs_title">Carbs (g)</string>
    <string name="settings_fat_title">Fat (g)</string>
    <string name="settings_protein_title">Protein (g)</string>
    <string name="settings_water_title">Water (ml)</string>
    <string name="settings_water_step_title">Cup size (ml)</string>
    <string name="settings_water_step_message">Amount of water added/subtracted on pressing +/- button on main page</string>
    <string name="settings_quiz_summary">Answer a small list of questions and get personal dietary plan</string>

    <string name="settings_lang_en" translatable="false">English</string>
    <string name="settings_lang_ru" translatable="false">Русский</string>

    <string name="settings_file_export_db">Export application database</string>
    <string name="settings_file_import_db">Import application database</string>
    <string name="settings_file_export_stats">Export stats summary</string>

    <string name="settings_file_export_stats_file_name" translatable="false">calTrack_stats_</string>
    <string name="settings_file_export_stats_success">Stats summary document has been saved to Downloads directory</string>
    <string name="settings_file_export_stats_fail">An error occurred during exporting. Stats summary document has not been saved</string>

    <string name="settings_file_export_stats_title">Your CalorieTracker Stats as of %s</string>
    <string name="settings_file_export_stats_weight_current">Body weight: %.1f kg</string>
    <string name="settings_file_export_stats_bmi">Body Mass Index (BMI): %.1f</string>
    <string name="settings_file_export_stats_weight_change_gain">Since you have started using CalorieTracker (%s),\nyou have gained: %.1f kg</string>
    <string name="settings_file_export_stats_weight_change_loss">Since you have started using CalorieTracker (%s),\nyou have lost: %.1f kg</string>
    <string name="settings_file_export_stats_weight_change_none">Since you have started using CalorieTracker (%s),\nyour weight has not changed</string>
    <string name="settings_file_export_stats_cals_total">Total calorie consumption: %s kcal</string>
    <string name="settings_file_export_stats_empty">You have no recorded stats</string>


    <!-- QUIZ PAGE -->
    <string name="quiz_btn_skip">Skip</string>
    <string name="quiz_btn_prev">Back</string>
    <string name="quiz_btn_next">Next</string>
    <string name="quiz_btn_finish">Finish</string>
    <string name="quiz_btn_confirm_result">OK</string>

    <string name="quiz_title_age">Your age</string>
    <string name="quiz_title_sex">Your sex</string>
    <string name="quiz_title_height">Your height</string>
    <string name="quiz_title_weight">Your weight</string>
    <string name="quiz_title_activity">Your activity level</string>
    <string name="quiz_title_goal">What is your goal?</string>
    <string name="quiz_title_result">Results</string>

    <string name="quiz_age_unit">yrs</string>

    <string name="quiz_gender_male">Male</string>
    <string name="quiz_gender_female">Female</string>

    <string name="quiz_height_unit">cm</string>

    <string name="quiz_weight_unit_kg">kg</string>
    <string name="quiz_weight_unit_g">g</string>

    <string name="quiz_activity_very_low_title">Sedentary</string>
    <string name="quiz_activity_low_title">Light</string>
    <string name="quiz_activity_low_description">Exercise 1–3 times a week or light physical work</string>
    <string name="quiz_activity_medium_title">Moderate</string>
    <string name="quiz_activity_medium_description">Exercise 4–5 times a week or moderate physical work</string>
    <string name="quiz_activity_high_title">High</string>
    <string name="quiz_activity_high_description">Exercise 6–7 times a week or hard physical work</string>
    <string name="quiz_activity_very_high_title">Very high</string>
    <string name="quiz_activity_very_high_description">Intense exercise or hard physical work every day</string>

    <string name="quiz_goal_lose">Weight loss</string>
    <string name="quiz_goal_maintain">Maintaining weight</string>
    <string name="quiz_goal_gain">Weight gain</string>
    <string name="settings_quiz_title">Auto-calculate</string>
    <string name="quiz_activity_very_low_description">Little or no exercise</string>

    <string name="quiz_result_title">Your daily consumption should be:</string>
    <string name="quiz_result_calories_format">%d kcal</string>
    <string name="quiz_result_carbs_format">%.1f g of carbs (50%%)</string>
    <string name="quiz_result_fat_format">%.1f g of fat (30%%)</string>
    <string name="quiz_result_protein_format">%.1f g of protein (20%%)</string>
    <string name="quiz_result_water_format">%d mL of clean water</string>

    <string name="quiz_skip_dialog_title">Are you sure you want to skip this test?</string>
    <string name="quiz_skip_dialog_description">Your consumption norms will not be changed</string>


    <!-- STATS PAGE -->
    <string name="stats_type_weight">Weight</string>
    <string name="stats_type_calories">Calories</string>

    <string name="stats_time_week">Week</string>
    <string name="stats_time_month">Month</string>
    <string name="stats_time_month_3">3 Months</string>
    <string name="stats_time_year">Year</string>
    <string name="stats_time_all">All time</string>

    <string name="stats_calories_title_total">Total consumption</string>
    <string name="stats_calories_title_avg">Average daily consumption</string>
    <string name="stats_weight_title_delta_loss">Total weight loss</string>
    <string name="stats_weight_title_delta_gain">Total weight gain</string>
    <string name="stats_weight_title_delta_no">No weight change</string>
    <string name="stats_weight_title_speed">Weight change rate</string>
    <string name="stats_weight_title_bmi">Current Body Mass Index (BMI)</string>

    <string name="stats_calories_value_format">%d kcal</string>
    <string name="stats_weight_value_delta_format">%.1f kg</string>
    <string name="stats_weight_value_speed_format">%.2f kg</string>
    <string name="stats_weight_value_speed_suffix_week">/week</string>
    <string name="stats_weight_value_speed_suffix_month">/month</string>

    <string name="stats_calories_empty">There is no calorie consumption data for chosen interval</string>
    <string name="stats_weight_empty">There is no weight data for chosen interval</string>

    <string name="stats_calories_chart_unit">kcal</string>
    <string name="stats_weight_chart_unit">kg</string>

</resources>
