<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.stats.StatsActivity"
    tools:ignore="RtlHardcoded">

    <RadioGroup
        android:id="@+id/stats_type_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.7">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/stats_type_weight"
            style="@style/FoodModeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_food_mode_first"
            android:button="@android:color/transparent"
            android:text="@string/stats_type_weight" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/stats_type_calories"
            style="@style/FoodModeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/btn_food_mode_last"
            android:button="@android:color/transparent"
            android:text="@string/stats_type_calories" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/stats_time_radio_group"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_type_radio_group">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/stats_time_week"
            style="@style/StatsTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_time_week" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/stats_time_month"
            style="@style/StatsTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/stats_time_month" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/stats_time_month_3"
            style="@style/StatsTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/stats_time_month_3" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/stats_time_year"
            style="@style/StatsTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/stats_time_year" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/stats_time_all"
            style="@style/StatsTimeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/stats_time_all" />

    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stats_section_chart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/back_section_general"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_time_radio_group"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.94">

        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stats_section_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/back_section_general"
        android:paddingBottom="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stats_section_chart"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.94">

        <com.app.calorietracker.ui.stats.views.StatTextView
            android:id="@+id/stats_text_weight_delta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:statIcon="@drawable/ic_weight_delta_loss"
            app:statTitle="@string/stats_weight_title_delta_loss" />

        <com.app.calorietracker.ui.stats.views.StatTextView
            android:id="@+id/stats_text_weight_speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_text_weight_delta"
            app:statIcon="@drawable/ic_weight_speed"
            app:statTitle="@string/stats_weight_title_speed" />

        <com.app.calorietracker.ui.stats.views.StatTextView
            android:id="@+id/stats_text_weight_bmi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_text_weight_speed"
            app:statIcon="@drawable/ic_weight_bmi"
            app:statTitle="@string/stats_weight_title_bmi" />

        <com.app.calorietracker.ui.stats.views.StatTextView
            android:id="@+id/stats_text_calories_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="12dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:statIcon="@drawable/ic_kcal_28"
            app:statTitle="@string/stats_calories_title_total" />

        <com.app.calorietracker.ui.stats.views.StatTextView
            android:id="@+id/stats_text_calories_avg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="12dp"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stats_text_calories_total"
            app:statIcon="@drawable/ic_kcal_28"
            app:statTitle="@string/stats_calories_title_avg" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/stats_navbar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/navbar_back"
        app:itemIconSize="32dp"
        app:itemIconTint="@color/nav_item_tint"
        app:itemTextColor="@color/nav_item_tint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navbar_items" />

</androidx.constraintlayout.widget.ConstraintLayout>